rust_extension/tests/ui/fail/invalid_pymodule_return.stderr
error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
  --> tests/ui/fail/invalid_pymodule_return.rs:15:58
   |
14 | fn bad_module(_py: Python<'_>, module: &Bound<'_, PyModule>) -> i32 {
   | ------------------------------------------------------------------- this function should return `Result` or `Option` to accept `?`
15 |     module.add_function(wrap_pyfunction!(example, module)?)?;
   |                                                          ^ cannot use the `?` operator in a function that returns `i32`

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
  --> tests/ui/fail/invalid_pymodule_return.rs:15:60
   |
14 | fn bad_module(_py: Python<'_>, module: &Bound<'_, PyModule>) -> i32 {
   | ------------------------------------------------------------------- this function should return `Result` or `Option` to accept `?`
15 |     module.add_function(wrap_pyfunction!(example, module)?)?;
   |                                                            ^ cannot use the `?` operator in a function that returns `i32`

error[E0308]: mismatched types
  --> tests/ui/fail/invalid_pymodule_return.rs:13:1
   |
13 | #[pymodule]
   | ^^^^^^^^^^^
   | |
   | expected `Result<(), PyErr>`, found `i32`
   | expected `Result<(), PyErr>` because of return type
   |
   = note: expected enum `Result<(), PyErr>`
              found type `i32`
   = note: this error originates in the attribute macro `pymodule` (in Nightly builds, run with -Z macro-backtrace for more info)
